# talkshow-guests

./: .dockerignore  Dockerfile  Readme.md  compose.yaml  docker-entrypoint.sh  pyproject.toml  requirements.txt  scrapy.cfg
talkshowguests/: __init__.py  __main__.py  items.py  middlewares.py  pipelines.py  settings.py
talkshowguests/reports/: telegram.py
talkshowguests/spiders/: caren_miosga_spider.py  hart_aber_fair_spider.py  maischberger_spider.py  markus_lanz_spider.py  maybrit_illner_spider.py  utils_tvtickets.py  utils_zdf.py
